--- a/sass/components/_our-products.scss
+++ b/sass/components/_our-products.scss
@@ -209,7 +209,7 @@
   }
 @media (max-width: 480px) {
   #products {
-    padding: 3rem 1rem;
+    padding: 30px 20px;
   }
   #products h2 {
     font-size: 2rem;
@@ -250,7 +250,7 @@
 /* Планшетна версія 481px - 767px */
 @media (min-width: 481px) and (max-width: 767px) {
   #products {
-    padding: 4rem 1.5rem;
+    padding: 50px 20px;
   }
   #products h2 {
     font-size: 2.5rem;
