--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -117,6 +117,9 @@
     font-size: 0.875rem;
   }
 @media (max-width: 480px) {
+  #about {
+    padding: 30px 20px;
+  }
   #about h2 {
     font-size: 2rem;
   }
@@ -148,7 +151,7 @@
 /* Планшетна версія 481px - 767px */
 @media (min-width: 481px) and (max-width: 767px) {
   #about {
-    padding: 4rem 1.5rem;
+    padding: 50px 20px;
   }
   #about h2 {
     font-size: 2.5rem;
