--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,5 +1,5 @@
 .contact-section {
-  padding: 80px 20px;
+  padding: 80px 0;
   background-color: #0f172a;
   color: #ffffff;
 }
@@ -40,7 +40,7 @@
 }
 @media (min-width: 1024px) {
   .contact-section {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
 }
 @media (min-width: 768px) {
@@ -300,9 +300,21 @@ input[type="tel"] {
   font-family: monospace;
   letter-spacing: 0.5px;
 }
+.error-message {
+  color: #f87171; /* червоний */
+  font-size: 12px;
+  margin-top: 4px;
+  min-height: 16px; /* щоб не скакало при появі/зникненні */
+  visibility: hidden;
+}
+
+.error-message.active {
+  visibility: visible;
+}
+
 @media (max-width: 480px) {
   .contact-section {
-    padding: 30px 20px;
+    padding: 30px 0;
   }
   .section-header h2 {
     font-size: 28px;
@@ -329,7 +341,7 @@ input[type="tel"] {
 /* Планшетна версія - від 481px до 767px */
 @media (min-width: 481px) and (max-width: 767px) {
   .contact-section {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
   .section-header h2 {
     font-size: 34px;
@@ -351,17 +363,4 @@ input[type="tel"] {
     font-size: 15px;
     padding: 13px;
   }
-}
-
-
-.error-message {
-  color: #f87171; /* червоний */
-  font-size: 12px;
-  margin-top: 4px;
-  min-height: 16px; /* щоб не скакало при появі/зникненні */
-  visibility: hidden;
-}
-
-.error-message.active {
-  visibility: visible;
 }
