--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
   background-color: #111827; /* dark gray */
   border-top: 1px solid #1f2937; /* darker border */
   color: #d1d5db; /* light gray text */
-  padding: 80px 20px;
+  padding: 80px 0;
   font-family: 'Inter', sans-serif;
 }
 
@@ -177,20 +177,16 @@ text-decoration: none;
 /* Responsive tweaks */
 @media (max-width: 480px) {
   .footer {
-    padding: 30px 20px;
+    padding: 30px 0;
   }
 }
 @media (min-width: 320px) and (max-width: 768px) {
   .footer {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
   .footer__company {
     grid-column: span 1;
   }
-  // .footer__contact-bar {
-  //   flex-direction: column;
-  //   gap: 1rem;
-  // }
   .footer__bottom-bar {
     flex-direction: column;
     gap: 1rem;
