--- a/sass/components/_our-products.scss
+++ b/sass/components/_our-products.scss
@@ -1,5 +1,5 @@
 #products {
-    padding: 80px 20px;
+    padding: 80px 0;
     background-color: #1a202c;
   }
   /* Заголовок */
@@ -209,7 +209,7 @@
   }
 @media (max-width: 480px) {
   #products {
-    padding: 30px 20px;
+    padding: 30px 0;
   }
   #products h2 {
     font-size: 2rem;
@@ -250,7 +250,7 @@
 /* Планшетна версія 481px - 767px */
 @media (min-width: 481px) and (max-width: 767px) {
   #products {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
   #products h2 {
     font-size: 2.5rem;
