--- a/sass/components/_why-choose.scss
+++ b/sass/components/_why-choose.scss
@@ -1,5 +1,5 @@
 .why-skynetix-section {
-  padding: 80px 20px;
+  padding: 80px 0;
   background-color: #1f2937;
   color: white;
 }
@@ -149,12 +149,12 @@
 
 @media (max-width: 480px) {
   .why-skynetix-section {
-    padding: 30px 20px;
+    padding: 30px 0;
   }
 
 }
 @media (min-width: 481px) and (max-width: 767px) {
   .why-skynetix-section {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
 }
