--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 html {
   scroll-behavior: smooth;
-  overflow-y: scroll;
+//   overflow-y: scroll;
+    overflow-x: hidden;
   font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
 }
 body {
     padding: 0;
@@ -15,11 +17,7 @@ html, body {
 body {
     overflow-x: hidden;
 }
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
+*, *::before, *::after { box-sizing: inherit; }
 h1, h2, h3, h4, h5, h6, p, ul, li {
     padding: 0;
     margin: 0;
@@ -35,6 +33,8 @@ a {
   max-width: 1200px; /* або 1140px, або те, що тобі потрібно */
   margin: 0 auto;
   width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 @import "./components/header";
 @import "./components/hero";
