--- a/sass/product.scss
+++ b/sass/product.scss
@@ -1,6 +1,8 @@
 html {
   scroll-behavior: smooth;
   font-family: "Inter", sans-serif;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
@@ -16,14 +18,9 @@ body {
 }
 
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+*, *::before, *::after { box-sizing: inherit; }
 
 h1,
 h2,
@@ -52,6 +49,8 @@ a {
   max-width: 1200px; /* або 1140px, або те, що тобі потрібно */
   margin: 0 auto;
   width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 @import "./components/header";
