--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -189,6 +189,9 @@ header {
       font-size: 0.95rem;
       color: #aaa;
       text-decoration: none;
+      display: flex;
+        align-items: center;
+        gap: 7px;
     }
 
     .mobile-products-list a:hover {
